Ensure close button in modal is inside gutter around modal content, so close button does not overlap content

--- a/css/modal.css
+++ b/css/modal.css
@@ -26,8 +26,8 @@
 
 #modal-close {
   position: absolute;
-  top: 4px;
-  right: 10px;
+  top: 0;
+  right: 6px;
   font-size: 24px;
   line-height: 1;
   font-weight: bold;
